--- a/Sass/base/_animations.scss
+++ b/Sass/base/_animations.scss
@@ -1,4 +1,4 @@
-@keyframes animation-translateX {
+@keyframes transleteX {
     
   
     0% {
@@ -7,13 +7,22 @@
         -moz-transform: translateX(0);
         -ms-transform: translateX(0);
         -o-transform: translateX(0);
+        
+}
+    50% {
+      transform: translateX(250px);
+      -webkit-transform: translateX(250px);
+      -moz-transform: translateX(250px);
+      -ms-transform: translateX(250px);
+      -o-transform: translateX(250px);
 }
     100% {
-        transform: translateX(1);
-        -webkit-transform: translateX(1);
-        -moz-transform: translateX(1);
-        -ms-transform: translateX(1);
-        -o-transform: translateX(1);
+        transform: translateX(349px);
+        -webkit-transform: translateX(349px);
+        -moz-transform: translateX(349px);
+        -ms-transform: translateX(349px);
+        -o-transform: translateX(349px);
+        width: 349px;
 }
 }
 
@@ -28,88 +37,40 @@
         width: 100%;
       }
     }
+
+@keyframes largeur {
+      from {
+          
+          width: 349px;
+        }
+      
+        to {
+          
+          width: 349px;
+        }
+      }
         
 
-@keyframes direction {
+@keyframes aller {
     0% {
           
-        left: 0px;
-        top: 0px;
+        width: 349px;
       }
       25% {
        
-        left: 200px;
-        top: 0px;
+        width: 300px;
       }
       50% {
         
-        left: 200px;
-        top: 200px;
+        width: 240px;
       }
       75% {
           
-          left: 0px;
-          top: 200px;
+        width: 300px;
         }
-        100% {
+      100% {
           
-          left: 0px;
-          top: 0px;
-        }}
+        width: 349px;
+        }
+      }
 
-@keyframes check {
-    0% {
-          
-        left: 0px;
-        top: 0px;
-      }
-      25% {
-       
-        left: 200px;
-        top: 0px;
-      }
-      50% {
-        
-        left: 200px;
-        top: 200px;
-      }
-      75% {
-          
-          left: 0px;
-          top: 200px;
-        }
-        100% {
-          
-          left: 0px;
-          top: 0px;
-        }
-}
-
-@keyframes menu-txt {
-    0% {
-          
-        left: 0px;
-        top: 0px;
-      }
-      25% {
-       
-        left: 200px;
-        top: 0px;
-      }
-      50% {
-        
-        left: 200px;
-        top: 200px;
-      }
-      75% {
-          
-          left: 0px;
-          top: 200px;
-        }
-        100% {
-          
-          left: 0px;
-          top: 0px;
-        }
-
-}
