--- a/Sass/components/_butons.scss
+++ b/Sass/components/_butons.scss
@@ -9,39 +9,42 @@
   }
   
   .searchbutton {
-    display: flex;
-    align-items: center;
-    align-content: center;
-    justify-content: center;
-    text-align: center;
-    border-radius: 25px;
-    background:linear-gradient(#FF79DA, #9356DA);
-    color: var(--White, #fff);
-    font-weight: 500;
-    -webkit-border-radius: 25px;
-    -moz-border-radius: 25px;
-    -ms-border-radius: 25px;
-    -o-border-radius: 25px;
-    box-shadow: 0px 4px 10px 0px #00000040;    
-    width: 30%;
-    align-items: center;
-    margin-left: 60px;
-    font-size: 16px;
-    font-weight: 500;
-    line-height: 19px;
-    letter-spacing: 0em;
-    border: none;
-   
-    
-    
+   display: flex;
+   align-items: center;
+   align-content: center;
+   justify-content: center;
+   text-align: center;
+   border-radius: 25px;
+   background:linear-gradient(#FF79DA, #9356DA);
+   color: var(--White, #fff);
+   font-weight: 500;
+   -webkit-border-radius: 25px;
+   -moz-border-radius: 25px;
+   -ms-border-radius: 25px;
+   -o-border-radius: 25px;
+   box-shadow: 0px 4px 10px 0px #00000040;
+   width: 218px;
+   height: 50px;
+   align-items: center;
+   margin-left: 60px;
+   font-size: 16px;
+   font-weight: 500;
+   line-height: 19px;
+   letter-spacing: 0em;
+   border: none;
+   transition: background-color 250ms       ;
+   -webkit-transition: background-color 250ms       ;
+   -moz-transition: background-color 250ms       ;
+   -ms-transition: background-color 250ms       ;
+   -o-transition: background-color 250ms       ;
 }
 
 .searchbutton a:hover {
   transition-property: all 2s ;
-  filter:brightness(1.75);
-  -webkit-filter:brightness(1.75);
-  box-shadow: 0px 4px 10px 0px #00000040;
+  
+  box-shadow: outset 0px 4px 10px 0px #00000040;
   opacity: 0.8;
+  background-color: brightness(2);
 }
 
 .searchbutton a {
