--- a/Sass/components/_icones.scss
+++ b/Sass/components/_icones.scss
@@ -70,9 +70,9 @@
     padding-left : 5px;    
   }
 
-  .fa-heart, .empty {
+  .fa-heart, .empty, .gris {
     position: absolute;
-    top: 45%;
+    top: 20%;
     left: 85%;
     color: #FFFFFF;
     background-color: #FFFFFF;
@@ -85,22 +85,27 @@
     -ms-border-radius: 50%;
     -o-border-radius: 50%;
     animation-name: direction;
-    animation-direction: alternate-reverse;   
+    position: absolute;  
+  }
+
+  .gris {
+    background-color:rgba(246, 246, 246, 1);
+    
   }
 
   .fa-heart::before {
     font-weight: bold;
     transition: color 1s ease-out;
-    animation-name: direction;
-    animation-direction: alternate-reverse; 
   }
 
   .fa-heart:hover::before{
     background-clip: text;
     color:transparent ;
-    background-image: linear-gradient(193.33deg, #9356DC -11.44%, #FF79DA 123.93%);  
-    animation-name: direction;
-    animation-direction: alternate-reverse; 
+    background-image: linear-gradient(193.33deg, #9356DC -11.44%, #FF79DA 123.93%); 
+    -webkit-text-stroke-color: transparent;
+    -webkit-text-stroke-width: 0px;
+    
+
   }
   
 
