--- a/Sass/layouts/_header.scss
+++ b/Sass/layouts/_header.scss
@@ -5,7 +5,7 @@
     padding: 20px 0px;
     flex-direction:column;
     align-items:center;
-    width: 100%;
+    width: 197px;
     padding-left: 50px;         
   }  
 
