--- a/Sass/components/_icones.scss
+++ b/Sass/components/_icones.scss
@@ -72,7 +72,7 @@
 
   .fa-heart, .empty, .gris {
     position: absolute;
-    top: 20%;
+    top: 18%;
     left: 85%;
     color: #FFFFFF;
     background-color: #FFFFFF;
@@ -90,7 +90,8 @@
 
   .gris {
     background-color:rgba(246, 246, 246, 1);
-    
+    padding-top: 10px;
+    left:260px;
   }
 
   .fa-heart::before {
@@ -121,7 +122,8 @@
 
   .fa-check-circle {
 	  width:16px;
-	  margin-right: 30px;
+    margin-right: 30px;
+    
 	  border-radius:0px,15px,15px,0px;
     color: #FFFFFF;
     justify-content: center;
