--- a/Sass/layouts/_footer.scss
+++ b/Sass/layouts/_footer.scss
@@ -7,9 +7,10 @@
     letter-spacing: 0em;
     text-align: left;
     padding-left: 20px;
-    color: rgba(255, 255, 255, 1);
+    
     margin-top: 0;
     width: 139px;
+    -webkit-filter:invert(100%);
 }
 
 footer {
