--- a/Sass/utils/_mixins.scss
+++ b/Sass/utils/_mixins.scss
@@ -7,3 +7,22 @@
     text-overflow: ellipsis;
     overflow: hidden;
 }
+@mixin media-min($_min-width) {
+    @media screen and (min-width: $_min-width) {
+      &{ @content; }
+    }
+  }
+  
+  #content {
+    width: 100%;
+    margin: 0 auto;
+
+   
+  
+    @include media-min(768px) {
+      width: 668px;
+    }
+    @include media-min(1024px) {
+      width: 1024px;
+    }
+  }
