--- a/Sass/layouts/_section.scss
+++ b/Sass/layouts/_section.scss
@@ -63,7 +63,7 @@ nav {
     object-fit: cover;   
   }
 
-  .img-restaurant {
+  .img-restaurant, .img-enchantee {
     width: 100%;
     object-fit:cover;   
   }
