--- a/Sass/main.css
+++ b/Sass/main.css
@@ -229,8 +229,22 @@ nav {
      object-fit: cover;
 }
 
-.img-restaurant, .img-enchantee {
+.img-restaurant {
   width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.img-enchantee {
+  width: 100%;
+  height: 265px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.img-enchantee-accueil {
+  width: 100%;
+  height: 230px;
   -o-object-fit: cover;
      object-fit: cover;
 }
