--- a/Sass/base/_animations.scss
+++ b/Sass/base/_animations.scss
@@ -27,51 +27,55 @@
 }
 }
 
-@keyframes slidein {
-    from {
-        margin-right: 100%;
-        width: 300%;
-      }
+@keyframes apparitio {
+    0% {
+        opacity: 0;
+        transform:translateY(20px);
+        -webkit-transform:translateY(20px);
+        -moz-transform:translateY(20px);
+        -ms-transform:translateY(20px);
+        -o-transform:translateY(20px);
+}
     
       to {
-        margin-right: 0%;
-        width: 100%;
-      }
+        opacity:1;
+        transform:translateY(0);
+        -webkit-transform:translateY(0);
+        -moz-transform:translateY(0);
+        -ms-transform:translateY(0);
+        -o-transform:translateY(0);
+}
     }
 
-@keyframes largeur {
-      from {
-          
-          width: 349px;
+@keyframes opacity {
+      0% {
+          opacity: 0;
         }
-      
-        to {
-          
-          width: 349px;
+        100% {
+          opacity: 1;
         }
       }
         
 
-@keyframes aller {
+@keyframes retract {
     0% {
-          
-        width: 349px;
-      }
-      25% {
-       
-        width: 300px;
-      }
-      50% {
-        
-        width: 240px;
-      }
-      75% {
-          
-        width: 300px;
-        }
+        transform: scaleX(0)     ;
+        -webkit-transform: scaleX(0)     ;
+        -moz-transform: scaleX(0)     ;
+        -ms-transform: scaleX(0)     ;
+        -o-transform: scaleX(0)     ;
+        right: 0%;
+        left: 0%;
+}
       100% {
-          
-        width: 349px;
-        }
-      }
+        transform:scaleX(1) ;
+        -webkit-transform:scaleX(1) ;
+        -moz-transform:scaleX(1) ;
+        -ms-transform:scaleX(1) ;
+        -o-transform:scaleX(1) ;
+        right: 100%;
+        left: 0%;
+}
+      
+}
 
