--- a/Sass/components/_icones.scss
+++ b/Sass/components/_icones.scss
@@ -96,8 +96,13 @@
 
   .fa-heart::before {
     font-weight: bold;
-    transition: color 1s ease-out;
-  }
+    transition: opacity 1.5s ease;
+    -webkit-transition: opacity 1.5s ease;
+    -moz-transition: opacity 1.5s ease;
+    -ms-transition: opacity 1.5s ease;
+    -o-transition: opacity 1.5s ease;
+    vertical-align: baseline;
+}
 
   .fa-heart:hover::before{
     background-clip: text;
@@ -122,18 +127,18 @@
 
   .fa-check-circle {
 	  width:16px;
-    margin-right: 30px;
-    
-	  border-radius:0px,15px,15px,0px;
-    color: #FFFFFF;
-    justify-content: center;
-    align-items: center;
-    display: flex;   
-	  border-top-right-radius: 25%;
-	  border-bottom-right-radius: 25%;
-    overflow: hidden;
-    
-  }
+	  margin-right: 20px;
+	  border-radius:15px;
+	  color: #FFFFFF;
+	  justify-content: center;
+	  align-items: center;
+	  display: flex;
+	  overflow: hidden;
+	  -webkit-border-radius:15px;
+	  -moz-border-radius:15px;
+	  -ms-border-radius:15px;
+	  -o-border-radius:15px;
+}
 
   .fa-handshake-simple {
     transform: rotate(-30deg);
