--- a/Sass/layouts/_section.scss
+++ b/Sass/layouts/_section.scss
@@ -65,7 +65,10 @@ nav {
 
   .img-restaurant  {
     width: 100%;
-    object-fit:cover;   
+    object-fit:cover;
+    height: 300px;
+    object-position: 50% 70%;
+    
   }
 
   .img-enchantee {
@@ -207,7 +210,198 @@ nav {
     
   }
 
-  .entrees, .plats, .desserts {
+  ul {
+    text-decoration: none;
+    padding: 0;
+    list-style-type: none;
+  } 
+  
+  
+  .menu  {
+  width: 90%;
+  height: 72px;
+  border: 2px solid blue;
+  display:flex;
+  
+  align-content: flex-start;
+  align-items:center;
+  
+  flex-wrap: wrap;
+  
+  flex-direction: column;
+  
+  justify-content: space-between;
+ 
+  padding: 0.5rem;
+  margin: 0;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  transition:all 0.5s ;
+  -webkit-transition:all 0.5s ;
+  -moz-transition:all 0.5s ;
+  -ms-transition:all 0.5s ;
+  -o-transition:all 0.5s ;
+} 
+  .article {
+  width: 100%;
+  height: 72px;
+  border: 2px solid blue;
+  display:flex;
+  justify-content: space-between;
+  align-content: flex-start;
+  flex-direction: column;
+  width: 90%;
+  
+ 
+  flex-wrap: wrap;
+  margin: 0;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  transition:all 0.5s ;
+  -webkit-transition:all 0.5s ;
+  -moz-transition:all 0.5s ;
+  -ms-transition:all 0.5s ;
+  -o-transition:all 0.5s ;
+} 
+   
+  
+  
+  .plats{
+      width:100%;
+      height:69px;
+      border: 2px solid red;
+      background: rgba(255, 255, 255, 1);
+      border-radius: 15.04px;
+      box-shadow: 0px 4.011494159698486px 15.043103218078613px 0px rgba(0, 0, 0, 0.1);
+      display:flex;
+      justify-content:space-around;
+      align-items:end;
+      overflow: hidden;
+      
+}
+   
+  .plats :hover {
+  width: 40%;
+  margin:0;
+  
+}
+  
+  
+.menu-txt {
+   border:2px solid blue;
+   height:69px;
+   width: 85%;
+   display: flex;   
+   justify-content: space-between;
+   flex-direction: column;
+   overflow: hidden;
+   white-space: nowrap;
+   text-overflow: ellipsis;
+    
+   }
+
+   .menu-txt :hover{}
+   
+  
+  .prix-txt {
+    width: 30px;
+    border:2px solid yellow;
+    position:relative;
+    top:5px;
+    font-weight: 700;
+    font-size: 0.9em;
+    padding-right: 10px;
+    
+     
+  }
+  
+  
+  
+  .accompagnement  {
+   background-color:orange;
+   position:relative;
+   bottom:15px;
+   font-weight: 500;
+   font-size: 0.8em;
+   overflow: hidden;
+   white-space: nowrap;
+   text-overflow: ellipsis;
+   
+   
+  }
+  .titre_menus {
+    background-color:orange;
+    position:relative;
+    bottom:5px;
+    font-weight: 700;
+    font-size: 0.9em;
+    overflow: hidden;
+   white-space: nowrap;
+   text-overflow: ellipsis;
+   
+  }
+  
+  .check {
+    width: 60px;
+    background-color:rgba(153, 226, 208, 1);
+    position: relative;
+    height:40px;
+    padding: 15px;
+    justify-content:center;
+    align-items: center;
+    display: flex;
+    margin: 0;
+    transition: all 0.5s;
+    -webkit-transition: all 0.5s;
+    -moz-transition: all 0.5s;
+    -ms-transition: all 0.5s;
+    -o-transition: all 0.5s;
+}
+
+  .check :hover {
+    
+}
+  
+  .validation {
+    width:25%;
+    display:flex;
+    justify-content:space-around;
+    align-items:end;
+    border:2px solid red;
+    position:relative;
+    right:-10px;
+    transform:translateX(50px);
+    -webkit-transform:translateX(50px);
+    -moz-transform:translateX(50px);
+    -ms-transform:translateX(50px);
+    -o-transform:translateX(50px);
+}
+  
+  .validation:hover {
+    transform:translateX(0);
+    transition-duration: all 5s ease;
+  }
+  
+  .vide {
+    width:1px;
+    height:60px;
+   display:block;
+    border:2px solid green;
+    position:relative;
+    
+    
+   
+  }
+  
+  .vide:hover {
+   
+  }
+  
+  
+
+  .entrees, .plates, .desserts {
     gap: 5px; 
     margin-left: 5px;
   }
@@ -225,158 +419,7 @@ nav {
     padding-top: 10px;     
   }
   
-  .menu {
-    max-width: 349px;
-    height: 72px;
-    padding-bottom: 15px;
-    gap: 5px;
-    
-    
-    
-  }
-
-  .menu :hover {
-    overflow: hidden;
-  }
-
-  .menuetprix {
-    max-width: 310px;
-    height: 69px;
-    
-    background: rgba(255, 255, 255, 1);
-    border-radius: 15.04px;
-    -webkit-border-radius: 15.04px;
-    -moz-border-radius: 15.04px;
-    -ms-border-radius: 15.04px;
-    -o-border-radius: 15.04px;
-    box-shadow: 0px 4.011494159698486px 15.043103218078613px 0px rgba(0, 0, 0, 0.1);
-    display: flex;
-    justify-content: space-between;
-    text-overflow: ellipsis;
-    overflow: hidden;
-    white-space: nowrap;
-    transform: translateX(0px) ;
-    -webkit-transform: translateX(0px) ;
-    -moz-transform: translateX(0px) ;
-    -ms-transform: translateX(0px) ;
-    -o-transform: translateX(0px) ;
-    transition-property: all;
-    animation: translateX 3000ms linear 200ms reverse ;
-    -webkit-animation: translateX 3000ms linear 200ms reverse ;
-}
-
-  .menuetprix :hover {
-    width: 210px;
-    overflow: hidden;
-    transform: translateX(0px) ;
-    -webkit-transform: translateX(0px) ;
-    -moz-transform: translateX(0px) ;
-    -ms-transform: translateX(0px) ;
-    -o-transform: translateX(0px) ;
-    transform-origin: right;
-    
-}
   
-
-.check   {
-  width: 60px;
-  background-color:rgba(153, 226, 208, 1);
-  position: relative;
-  
-  padding: 15px;
-  right: 30px;
-  justify-content: center;
-  align-items: center;
-  display: flex;
-  border-top-right-radius: 25%;
-  border-bottom-right-radius: 25%;
-  overflow:hidden;
-  transform: translateX(60px);
-  -webkit-transform: translateX(60px);
-  -moz-transform: translateX(60px);
-  -ms-transform: translateX(60px);
-  -o-transform: translateX(60px);
-}
-
-.check :hover {
-  transform: translateX(60px);
-  -webkit-transform: translateX(60px);
-  -moz-transform: translateX(60px);
-  -ms-transform: translateX(60px);
-  -o-transform: translateX(60px);
-  animation: largeur 3s linear 2S reverse ;
-  transform-origin: right;
-  -webkit-animation: largeur 3s linear 2S reverse ;
-}
-
-  .prix {
-    width: 27px;
-    height: 18px;
-    margin-right: 2px;
-    
-    padding-top: 27px;
-    position: relative;
-    right: 40px;
-    display: flex;
-    text-align:start;
-    transform: translateX(50px);
-    -webkit-transform: translateX(50px);
-    -moz-transform: translateX(50px);
-    -ms-transform: translateX(50px);
-    -o-transform: translateX(50px);
-}
-   .prix :hover {
-    transform: translateX(50px);
-    -webkit-transform: translateX(50px);
-    -moz-transform: translateX(50px);
-    -ms-transform: translateX(50px);
-    -o-transform: translateX(50px);
-    animation: largeur 3s linear 2S reverse ;
-    transform-origin: right;
-    -webkit-animation: largeur 3s linear 2S reverse ;
-}
-    
-  
-  .menu-txt {
-	  width: 245px;	 
-	  margin: 10px;
-    text-overflow: ellipsis;
-    overflow: visible;
-    white-space: nowrap;
-    
-  }
-
-  .titre_menus { 
-    width: 287px;  
-    font-size: 1em;
-    font-weight: 700;
-    line-height: 21.09px;
-    color: black; 
-    margin:0;
-    
-    @include line-clamp(2, 0.8em); 
-  }
-
-  .subtitle_menus {
-    width: 287px;  
-    font-size: 0.8em;
-    font-weight: 300;
-    line-height: 17.63px;
-    color: rgba(0, 0, 0, 1);
-    @include line-clamp(3, 0.8em);
-   
-  }
-
-  .prix-txt {    
-    font-size: 15px;
-    font-weight: 700;
-    line-height: 18px;
-    letter-spacing: 0em;
-    text-align: center;
-    color: rgba(0, 0, 0, 1);
-  }
-
-
   .commander {
     padding-top: 15px;
     padding-bottom: 15px;
@@ -388,6 +431,7 @@ nav {
     height: 220px;
     background-color: white;
     border-radius: 20px;
+    filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
     -webkit-filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
-  }
+}
 
