--- a/Sass/layouts/_section.scss
+++ b/Sass/layouts/_section.scss
@@ -244,14 +244,14 @@ nav {
   -o-transition:all 0.5s ;
 } 
   .article {
-  width: 100%;
+  width: 90%;
   height: 72px;
   border: 2px solid blue;
   display:flex;
   justify-content: space-between;
   align-content: flex-start;
   flex-direction: column;
-  width: 90%;
+  width: 100%;
   
  
   flex-wrap: wrap;
@@ -276,19 +276,21 @@ nav {
       border-radius: 15.04px;
       box-shadow: 0px 4.011494159698486px 15.043103218078613px 0px rgba(0, 0, 0, 0.1);
       display:flex;
-      justify-content:space-around;
+      justify-content:flex-end;
       align-items:end;
       overflow: hidden;
       
 }
    
-  .plats :hover {
-  width: 40%;
-  margin:0;
   
-}
-  
-  
+ .menu:hover .plats .validation {
+    width:80px;
+    position: relative;
+    align-items: flex-start;
+   
+  }
+
+
 .menu-txt {
    border:2px solid blue;
    height:69px;
@@ -302,17 +304,19 @@ nav {
     
    }
 
-   .menu-txt :hover{}
+   
    
   
   .prix-txt {
     width: 30px;
     border:2px solid yellow;
     position:relative;
-    top:5px;
+    top:24px;
+   
     font-weight: 700;
-    font-size: 0.9em;
-    padding-right: 10px;
+    font-size: 0.850em;
+    padding-right: 5px;
+    
     
      
   }
@@ -324,10 +328,11 @@ nav {
    position:relative;
    bottom:15px;
    font-weight: 500;
-   font-size: 0.8em;
+   font-size: 0.850rem;
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
+   
    
    
   }
@@ -336,10 +341,11 @@ nav {
     position:relative;
     bottom:5px;
     font-weight: 700;
-    font-size: 0.9em;
+    font-size: 0.950em;
     overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
+  
    
   }
   
@@ -358,46 +364,42 @@ nav {
     -moz-transition: all 0.5s;
     -ms-transition: all 0.5s;
     -o-transition: all 0.5s;
+    
 }
 
   .check :hover {
-    
+  
 }
   
   .validation {
-    width:25%;
+    width:30px;
     display:flex;
+    position: relative;
     justify-content:space-around;
-    align-items:end;
+    align-items:flex-start;
     border:2px solid red;
     position:relative;
-    right:-10px;
-    transform:translateX(50px);
-    -webkit-transform:translateX(50px);
-    -moz-transform:translateX(50px);
-    -ms-transform:translateX(50px);
-    -o-transform:translateX(50px);
+    transform:translateX(1px);
+    -webkit-transform:translateX(1px);
+    -moz-transform:translateX(1px);
+    -ms-transform:translateX(1px);
+    -o-transform:translateX(1px);
+    
 }
   
   .validation:hover {
     transform:translateX(0);
     transition-duration: all 5s ease;
-  }
-  
-  .vide {
-    width:1px;
-    height:60px;
-   display:block;
-    border:2px solid green;
-    position:relative;
+    -webkit-transform:translateX(0px);
+    -moz-transform:translateX(0px);
+    -ms-transform:translateX(0px);
+    -o-transform:translateX(0px);
     
-    
-   
-  }
+}
   
-  .vide:hover {
-   
-  }
+ 
+  
+ 
   
   
 
