--- a/Sass/layouts/_section.scss
+++ b/Sass/layouts/_section.scss
@@ -218,11 +218,11 @@ nav {
   
   
   .menu  {
-  width: 90%;
+  width: 95%;
   height: 72px;
   border: 2px solid blue;
   display:flex;
-  
+ 
   align-content: flex-start;
   align-items:center;
   
@@ -232,7 +232,7 @@ nav {
   
   justify-content: space-between;
  
-  padding: 0.5rem;
+  padding: 0.1rem;
   margin: 0;
   overflow: hidden;
   white-space: nowrap;
@@ -294,7 +294,8 @@ nav {
 .menu-txt {
    border:2px solid blue;
    height:69px;
-   width: 85%;
+   width: 98%;
+  
    display: flex;   
    justify-content: space-between;
    flex-direction: column;
@@ -312,7 +313,7 @@ nav {
     border:2px solid yellow;
     position:relative;
     top:24px;
-   
+    left: 5px;
     font-weight: 700;
     font-size: 0.850em;
     padding-right: 5px;
@@ -328,7 +329,7 @@ nav {
    position:relative;
    bottom:15px;
    font-weight: 500;
-   font-size: 0.850rem;
+   font-size: 0.800rem;
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
@@ -364,15 +365,14 @@ nav {
     -moz-transition: all 0.5s;
     -ms-transition: all 0.5s;
     -o-transition: all 0.5s;
+    overflow: hidden;
     
 }
 
-  .check :hover {
-  
-}
+ 
   
   .validation {
-    width:30px;
+    width:0px;
     display:flex;
     position: relative;
     justify-content:space-around;
