--- a/Sass/base/_typography.scss
+++ b/Sass/base/_typography.scss
@@ -12,7 +12,7 @@
   
   .section-title {
     width: 100%;
-    font-size: 1.5em;
+    font-size: 1.7em;
     font-weight: 700;
     text-align:center;
     
@@ -55,9 +55,9 @@
 
 .logopages {
   display: flex;
-  justify-content:flex-start;
-  align-items: center;
-  width: 90%;
+  justify-content:center;
+  align-items:center;
+  width:90%;
 }
  
 ul {
