--- a/Sass/layouts/_section.scss
+++ b/Sass/layouts/_section.scss
@@ -45,6 +45,7 @@ nav {
     padding-bottom: 50px;
   }
 
+  
   .section-title3{
     padding-left: 5px; 
   }
@@ -218,9 +219,9 @@ nav {
   
   
   .menu  {
-  width: 95%;
+  width: 97%;
   height: 72px;
-  border: 2px solid blue;
+ 
   display:flex;
  
   align-content: flex-start;
@@ -244,9 +245,9 @@ nav {
   -o-transition:all 0.5s ;
 } 
   .article {
-  width: 90%;
+ 
   height: 72px;
-  border: 2px solid blue;
+  
   display:flex;
   justify-content: space-between;
   align-content: flex-start;
@@ -271,7 +272,7 @@ nav {
   .plats{
       width:100%;
       height:69px;
-      border: 2px solid red;
+      
       background: rgba(255, 255, 255, 1);
       border-radius: 15.04px;
       box-shadow: 0px 4.011494159698486px 15.043103218078613px 0px rgba(0, 0, 0, 0.1);
@@ -292,10 +293,10 @@ nav {
 
 
 .menu-txt {
-   border:2px solid blue;
-   height:69px;
-   width: 98%;
-  
+   
+   height:75px;
+   width: 100%;
+  margin-left: 10px;
    display: flex;   
    justify-content: space-between;
    flex-direction: column;
@@ -310,13 +311,14 @@ nav {
   
   .prix-txt {
     width: 30px;
-    border:2px solid yellow;
+    
     position:relative;
     top:24px;
-    left: 5px;
+    left: -2px;
     font-weight: 700;
     font-size: 0.850em;
-    padding-right: 5px;
+    
+   
     
     
      
@@ -325,27 +327,53 @@ nav {
   
   
   .accompagnement  {
-   background-color:orange;
+   
    position:relative;
    bottom:15px;
    font-weight: 500;
-   font-size: 0.800rem;
+   font-size: 0.850rem;
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
-   
-   
+   padding-right: 10px;
    
   }
+  .accompagnement-madagascar  {
+    position:relative;
+    bottom:15px;
+    font-weight: 500;
+    font-size: 0.860rem;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    padding-right: 70px; 
+    
+  }
+
   .titre_menus {
-    background-color:orange;
+    
     position:relative;
     bottom:5px;
     font-weight: 700;
-    font-size: 0.950em;
+    font-size: 1em;
     overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
+   padding-right: 20px;
+  
+   
+  }
+
+  .titre_menus_madagascar {
+    
+    position:relative;
+    bottom:5px;
+    font-weight: 700;
+    font-size: 1em;
+    overflow: hidden;
+   white-space: nowrap;
+   text-overflow: ellipsis;
+   padding-right: 45px;
   
    
   }
@@ -355,7 +383,7 @@ nav {
     background-color:rgba(153, 226, 208, 1);
     position: relative;
     height:40px;
-    padding: 15px;
+    padding: 15px 12px;    
     justify-content:center;
     align-items: center;
     display: flex;
@@ -366,6 +394,7 @@ nav {
     -ms-transition: all 0.5s;
     -o-transition: all 0.5s;
     overflow: hidden;
+    margin-left: 10px;
     
 }
 
@@ -377,7 +406,7 @@ nav {
     position: relative;
     justify-content:space-around;
     align-items:flex-start;
-    border:2px solid red;
+   
     position:relative;
     transform:translateX(1px);
     -webkit-transform:translateX(1px);
