--- a/Sass/layouts/_header.scss
+++ b/Sass/layouts/_header.scss
@@ -2,18 +2,19 @@
     display: flex;
     text-align: center;
     justify-content:center;
-    padding: 20px 0px;
+    padding: 10px;
     flex-direction:column;
     align-items:center;
     width: 197px;
-    padding-left: 50px;         
+    padding-left: 75px;
+           
   }  
 
 
   .sub-title {
     text-align: center;
     font-weight: 300;
-    width:100% ;
+    width:90% ;
     font-size: 16px;
     padding-left: 10px;
     line-height: 21px;
