--- a/Sass/main.css
+++ b/Sass/main.css
@@ -26,7 +26,7 @@
 
 .section-title {
   width: 100%;
-  font-size: 1.5em;
+  font-size: 1.7em;
   font-weight: 700;
   text-align: center;
   line-height: 28.13px;
@@ -66,7 +66,7 @@ a {
 
 .logopages {
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
   width: 90%;
 }
@@ -143,17 +143,17 @@ footer {
   display: flex;
   text-align: center;
   justify-content: center;
-  padding: 20px 0px;
+  padding: 10px;
   flex-direction: column;
   align-items: center;
   width: 197px;
-  padding-left: 50px;
+  padding-left: 75px;
 }
 
 .sub-title {
   text-align: center;
   font-weight: 300;
-  width: 100%;
+  width: 90%;
   font-size: 16px;
   padding-left: 10px;
   line-height: 21px;
@@ -378,9 +378,8 @@ ul {
 }
 
 .menu {
-  width: 95%;
+  width: 97%;
   height: 72px;
-  border: 2px solid blue;
   display: flex;
   align-content: flex-start;
   align-items: center;
@@ -400,9 +399,7 @@ ul {
 }
 
 .article {
-  width: 90%;
   height: 72px;
-  border: 2px solid blue;
   display: flex;
   justify-content: space-between;
   align-content: flex-start;
@@ -423,7 +420,6 @@ ul {
 .plats {
   width: 100%;
   height: 69px;
-  border: 2px solid red;
   background: rgb(255, 255, 255);
   border-radius: 15.04px;
   box-shadow: 0px 4.0114941597px 15.0431032181px 0px rgba(0, 0, 0, 0.1);
@@ -440,9 +436,9 @@ ul {
 }
 
 .menu-txt {
-  border: 2px solid blue;
-  height: 69px;
-  width: 98%;
+  height: 75px;
+  width: 100%;
+  margin-left: 10px;
   display: flex;
   justify-content: space-between;
   flex-direction: column;
@@ -453,35 +449,55 @@ ul {
 
 .prix-txt {
   width: 30px;
-  border: 2px solid yellow;
   position: relative;
   top: 24px;
-  left: 5px;
+  left: -2px;
   font-weight: 700;
   font-size: 0.85em;
-  padding-right: 5px;
 }
 
 .accompagnement {
-  background-color: orange;
   position: relative;
   bottom: 15px;
   font-weight: 500;
-  font-size: 0.8rem;
+  font-size: 0.85rem;
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
+  padding-right: 10px;
+}
+
+.accompagnement-madagascar {
+  position: relative;
+  bottom: 15px;
+  font-weight: 500;
+  font-size: 0.86rem;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  padding-right: 70px;
 }
 
 .titre_menus {
-  background-color: orange;
   position: relative;
   bottom: 5px;
   font-weight: 700;
-  font-size: 0.95em;
+  font-size: 1em;
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
+  padding-right: 20px;
+}
+
+.titre_menus_madagascar {
+  position: relative;
+  bottom: 5px;
+  font-weight: 700;
+  font-size: 1em;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  padding-right: 45px;
 }
 
 .check {
@@ -489,7 +505,7 @@ ul {
   background-color: rgb(153, 226, 208);
   position: relative;
   height: 40px;
-  padding: 15px;
+  padding: 15px 12px;
   justify-content: center;
   align-items: center;
   display: flex;
@@ -500,6 +516,7 @@ ul {
   -ms-transition: all 0.5s;
   -o-transition: all 0.5s;
   overflow: hidden;
+  margin-left: 10px;
 }
 
 .validation {
@@ -508,7 +525,6 @@ ul {
   position: relative;
   justify-content: space-around;
   align-items: flex-start;
-  border: 2px solid red;
   position: relative;
   transform: translateX(1px);
   -webkit-transform: translateX(1px);
