--- a/Sass/main.css
+++ b/Sass/main.css
@@ -786,6 +786,84 @@ abbr {
   -o-transform: rotate(-30deg);
 }
 
+html, body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+}
+
+.loader-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: 1;
+  transition: opacity 3s ease;
+}
+
+.loader {
+  border: 16px solid #f3f3f3;
+  border-top: 16px solid rgb(234, 234, 234);
+  background-image: linear-gradient(#9356DA, #FF79DA);
+  border-radius: 50%;
+  width: 120px;
+  height: 120px;
+  animation: spin 3s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+.content {
+  padding: 20px;
+}
+
+.loader-container.loaded {
+  opacity: 0;
+  pointer-events: none;
+}
+
+.content {
+  padding: 20px;
+}
+
+@keyframes fadeOut {
+  0% {
+    opacity: 1;
+  }
+  75% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+#loader.loaded {
+  display: none;
+}
+
+#content.loaded {
+  display: block;
+}
+
+#loader.loaded + #content {
+  display: block;
+}
+
+.loader-container {
+  animation: fadeOut 3s forwards;
+}
+
 input {
   border: none;
   justify-content: center;
