--- a/Sass/main.scss
+++ b/Sass/main.scss
@@ -27,6 +27,7 @@
 @import
   'components/butons',
   'components/icones',
+  'components/loader',
   'components/inputs';
 
 // 6. Page-specific styles
