--- a/Sass/base/_animations.scss
+++ b/Sass/base/_animations.scss
@@ -27,7 +27,7 @@
 }
 }
 
-@keyframes apparitio {
+@keyframes apparition {
     0% {
         opacity: 0;
         transform:translateY(20px);
@@ -78,4 +78,5 @@
 }
       
 }
+
 
