--- a/Sass/layouts/_section.scss
+++ b/Sass/layouts/_section.scss
@@ -40,7 +40,8 @@ nav {
 
   .menus {
     background-color: #F2F4F4;
-    
+    padding-left: 5px;
+    padding-right: 5px;
     padding-top: 30px;
     padding-bottom: 50px;
   }
