--- a/Sass/utils/_mixins.scss
+++ b/Sass/utils/_mixins.scss
@@ -26,3 +26,9 @@
       width: 1024px;
     }
   }
+
+  /****** Media queries ***********/
+/* Medium devices (tablets, less/equal than 1024px) */
+@media (min-width: 767.98px) and (max-width: 1024px) {
+ 
+}
