--- a/Sass/layouts/_header.scss
+++ b/Sass/layouts/_header.scss
@@ -2,11 +2,12 @@
     display: flex;
     text-align: center;
     justify-content:center;
-    padding: 10px;
+   
     flex-direction:column;
     align-items:center;
-    width: 197px;
-    padding-left: 75px;
+    width: 100%;
+    
+   
            
   }  
 
