--- a/Sass/components/_loader.scss
+++ b/Sass/components/_loader.scss
@@ -53,9 +53,9 @@ html, body {
 
 
 @keyframes fadeOut {
-    0% { opacity: 1; }
-    75% { opacity: 1; }
-    100% { opacity: 0; }
+    0% { opacity: 1; z-index: 1;}
+    75% { opacity: 1;z-index: 2; }
+    100% { opacity: 0; z-index: 0;}
 }
 
 #loader.loaded {
